# adaptive-firmware

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SOURCE_CLAIM.md  STATUS.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  research_question.md
.github/workflows/: ci.yml  publish.yml  welcome.yml
benchmarks/: README.md  __init__.py  aggregator.py  runner.py
benchmarks/analysis/: THESIS.md  __init__.py  engine.py  lookahead_oracle.py  run_all.py
benchmarks/baselines/: __init__.py  oracle.py  random.py  static.py
benchmarks/results/: LEADERBOARD.md  audio_encoder_1.0.0_neural_2026-07-03T19-22-11.518716Z.json  audio_encoder_1.0.0_neural_2026-07-03T21-11-55.232621Z.json  audio_encoder_1.0.0_neural_2026-07-06T14-39-23.760449Z.json  audio_encoder_1.0.0_neural_2026-07-06T14-44-28.899116Z.json  audio_encoder_1.0.0_neural_2026-07-06T15-15-07.047674Z.json  audio_encoder_1.0.0_oracle_2026-07-03T19-22-11.481616Z.json  audio_encoder_1.0.0_oracle_2026-07-03T21-11-55.202885Z.json  audio_encoder_1.0.0_oracle_2026-07-06T14-39-23.731670Z.json  audio_encoder_1.0.0_oracle_2026-07-06T14-44-28.866979Z.json  (+291 more)
benchmarks/tests/: __init__.py  conftest.py  (+1 more)
concepts/: workload-adaptive-silicon-verification.md
docs/: README.md  architecture.md
scripts/: compare_agents.py  run_demo.py  run_lookahead_demo.py  run_real_benchmarks.py
tests/: test_agent.py  test_e2e.py  test_hardware_sim.py  test_neural_agent.py  test_profile_agent.py
(+29 files in other folders)
